# scaling-adventure

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/skills/seo-geo-aeo/: SKILL.md
.github/skills/seo-search-performance/: SKILL.md
misc/: mindmap.puml
report/: audit_report_claude.md  audit_report_copilot.md
terms/: main.py  pyproject.toml
terms/src/api/: main.py
terms/src/application/: seo_geo_aeo_agent.py
ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  styles.css
